update readme and config.example.json

--- a/docker_status/templates/index.html
+++ b/docker_status/templates/index.html
@@ -7,7 +7,7 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
   <title>BiRabittoh - Status</title>
-  <meta name="description" content="A simple status page for my docker containers.">
+  <meta name="description" content="A simple status page for my Docker containers.">
   <meta name="author" content="BiRabittoh">
 
   <!-- Mobile Specific Metas
